--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#My CV">Home</a></li>
+            <li><a href="#My links">About</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <main>
-        <section id="home">
+        <section id="My CV">
             <h2>Home</h2>
-            <p>This is the home section.</p>
+            <p>I am Rong</p>
         </section>
-        <section id="about">
+        <section id="My links">
             <h2>About</h2>
-            <p>This is the about section.</p>
+            <p>Not telling you my links</p>
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>This is the contact section.</p>
+            <p>secret</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 My Simple Website</p>
+        <p>RONG's website</p>
     </footer>
 </body>
 </html>
