--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
+    <title>RongSHI</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,15 +12,16 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#My CV">Home</a></li>
+            <li><a href="#My CV">My CV</a></li>
             <li><a href="#My links">About</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <main>
         <section id="My CV">
-            <h2>Home</h2>
-            <p>I am Rong</p>
+            <h2>My CV</h2>
+            <h1>Embedded PDF Example</h1>
+            <embed src="path/to/your/document.pdf" width="600" height="500" type="application/pdf">
         </section>
         <section id="My links">
             <h2>About</h2>
