--- a/index.html
+++ b/index.html
@@ -20,16 +20,12 @@
     <main>
         <section id="My CV">
             <h2>My CV</h2>
-            <h1>Embedded PDF Example</h1>
-            <embed src="path/to/your/document.pdf" width="600" height="500" type="application/pdf">
-        </section>
-        <section id="My links">
-            <h2>About</h2>
-            <p>Not telling you my links</p>
+            <h1>My CV</h1>
+            <embed src="Rong Shi CV.pdf" width="600" height="500" type="application/pdf">
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>secret</p>
+            <p>Email: rongshi206@gmail.com</p>
         </section>
     </main>
     <footer>
