--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <main>
         <section id="My CV">
             <h2>My CV</h2>
-            <h1>My CV</h1>
-            <embed src="Rong Shi CV.pdf" width="600" height="500" type="application/pdf">
+            <a href="Rong Shi CV.pdf" target="_blank">Link to CV</a>
         </section>
         <section id="contact">
             <h2>Contact</h2>
