--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>DANGER!You are visiting Rong's website</h1>
+        <h1>Rong Shi's website</h1>
+        <img src="me.HEIC" alt="Photo of me">
     </header>
     <nav>
         <ul>
@@ -18,11 +19,11 @@
     </nav>
     <main>
         <section id="My CV">
-            <h2>My CV</h2>
+            <h4>My CV</h4>
             <a href="Rong Shi CV.pdf" target="_blank">Link to CV</a>
         </section>
         <section id="contact">
-            <h2>Contact</h2>
+            <h4>Contact</h4>
             <p>Email: rongshi206@gmail.com</p>
         </section>
     </main>
