--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Rong Shi's website</h1>
-        <img src="me.HEIC" alt="Photo of me">
+        <img src="me.HEIC" alt="Photo of me" width="150" height="200">
     </header>
     <nav>
         <ul>
