--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <header>
         <h1>Rong Shi's website</h1>
     </header>
-    <img src="me.HEIC" alt="Photo of me" width="300" height="400">
+    <div class="main-content">
+        <img src="me.HEIC" alt="Photo of me" width="300" height="400">
+    </div>
     <main>
         <section id="My CV">
             <h4>My CV</h4>
