--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <h4>Contact</h4>
             <p>Email: rongshi206@gmail.com</p>
         </section>
+        <div id="Weather">
+            <h4>Weather</h4>
+            <p> 24 degree</p>
+        </div>        
     </main>
     <footer>
         <p>RONG's website</p>
