--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
             <p>Email: rongshi206@gmail.com</p>
         </section>
         <div id="Weather">
-            <h4>Weather</h4>
-            <p> 24 degree</p>
+            <iframe src="widget.html" width="220" height="100" style="border:none;"></iframe>
         </div>        
     </main>
     <footer>
